# Yolov8-cs2

./: .gitattributes  .gitignore  CMakeLists.txt  main.cpp  note.txt
onnxruntime/: CodeSignSummary-b7309777-7248-47de-bbd1-8ab67c11ac22.md  GIT_COMMIT_ID  README.md  VERSION_NUMBER
onnxruntime/include/: onnxruntime_c_api.h  onnxruntime_cxx_api.h  onnxruntime_cxx_inline.h  onnxruntime_lite_custom_op.h  onnxruntime_session_options_config_keys.h
onnxruntime/lib/: onnxruntime_providers_cuda.lib  onnxruntime_providers_shared.lib  onnxruntime_providers_tensorrt.lib
src/: main.cpp
src/capture/: screen_capture.cpp  screen_capture.hpp
src/control/: mouse_controller.cpp  mouse_controller.hpp
src/core/: detection_types.hpp  detector.cpp  detector.hpp
src/display/: overlay.cpp  overlay.hpp
src/export/: json_export.cpp  json_export.hpp
src/realtime/: realtime_detector.cpp  realtime_detector.hpp
